# Flask-blog

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_COMPLETE.md  README.md  WORDPRESS_MIGRATION_GUIDE.md  app.py  blog.db  config.py  create_sample_project.py  forms.py  models.py  pyproject.toml  template.html
blog_app/: __init__.py  cli.py
blog_app/blueprints/: auth.py
blog_app/blueprints/admin/: routes.py
blog_app/blueprints/api/: routes.py
blog_app/blueprints/public/: routes.py
blog_app/utils/: database.py  images.py  markdown.py  slug.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  blog_list.html  blog_post.html  index.html  login.html  project.html  projects.html
templates/admin/: base.html  categories.html  category_form.html  dashboard.html  page_form.html  pages.html  post_form.html  settings.html  tag_form.html  tags.html
templates/pages/: layout_full-width.html  layout_sidebar-left.html  layout_sidebar-right.html
